[package]
name = "eight-deep-parser"
version = "0.2.2"
edition = "2021"
description = "Dpkg info parser"
license = "MIT"
documentation = "https://docs.rs/eight-deep-parser"
homepage = "https://github.com/AOSC-Dev/8dparser"
repository = "https://github.com/AOSC-Dev/8dparser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
thiserror = "1.0"
